--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.7",
+    "framer-motion": "^2.0.0-beta.76",
     "gatsby": "^2.23.3",
     "gatsby-image": "^2.4.7",
     "gatsby-plugin-google-analytics": "^2.3.4",
@@ -32,12 +33,14 @@
     "gatsby-source-datocms": "^2.2.6",
     "gatsby-source-filesystem": "^2.3.11",
     "gatsby-transformer-sharp": "^2.5.5",
+    "nuka-carousel": "^4.7.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "react-use": "^15.3.0",
     "styled-components": "^5.1.1",
-    "styled-normalize": "^8.0.7"
+    "styled-reset-advanced": "^1.0.3"
   },
   "devDependencies": {
     "prettier": "2.0.5"
