--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@brainhubeu/react-carousel": "^1.19.16",
     "babel-plugin-styled-components": "^1.10.7",
     "framer-motion": "^2.0.0-beta.77",
     "gatsby": "^2.23.3",
