--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "gatsby-plugin-manifest": "^2.4.11",
     "gatsby-plugin-offline": "^3.2.9",
     "gatsby-plugin-react-helmet": "^3.3.4",
+    "gatsby-plugin-robots-txt": "^1.5.1",
     "gatsby-plugin-sharp": "^2.6.11",
+    "gatsby-plugin-sitemap": "^2.4.11",
     "gatsby-plugin-styled-components": "^3.3.4",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-datocms": "^2.2.6",
