--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
   "devDependencies": {
     "prettier": "2.0.5"
   },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/ITSjwags/reprise-post"
