--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.7",
-    "framer-motion": "^2.0.0-beta.77",
+    "framer-motion": "2.7.6",
     "gatsby": "^2.23.3",
     "gatsby-image": "^2.4.7",
     "gatsby-plugin-google-gtag": "^2.1.10",
